src/ui/snapshots/state/default/version_input/with_long_version.snap
---
source: src/ui/state/default/version_input.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                              Enter Version Number                              "
"                                                                                "
"                                                                                "
"  ┌Version───────────────────────────────────────────────────────────────────┐  "
"  │v2.5.0-alpha.1+build.123                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"              Type version number and press Enter | Esc to go back              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
