src/ui/snapshots/state/default/version_input/with_version.snap
---
source: src/ui/state/default/version_input.rs
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                  Enter Version Number                                                  "
"                                                                                                                        "
"                                                                                                                        "
"  ┌Version───────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │v1.2.3                                                                                                            │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                  Type version number and press Enter | Esc to go back                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
